Migrate off of Robolectric